# bot/src/main/java/backend/academy/bot/model/api/NotificationDto.java
@@ -6,6 +6,7 @@ public record NotificationDto(
         Long id,
         Long linkId,
         String url,
+        String eventUrl,
         String title,
         String updateOwner,
         String description,
